# jammi-ai

./: .dockerignore  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  deny.toml  pyproject-cuda.toml  pyproject.toml  rust-toolchain.toml
clients/python/: Makefile  README.md  pyproject.toml
clients/python/jammi_client/: __init__.py  _assembly.py  _conformal.py  _credentials.py  _database.py  _errors.py  _target.py
clients/python/scripts/: fix_proto_imports.py
clients/python/tests/: conftest.py  test_arrow_framing.py  test_conformal.py  test_credentials.py  test_eval_projection.py  test_fine_tune_config.py  test_flight_bearer.py  test_generated_floor.py  test_remote_channel_live.py  test_remote_eval_live.py  test_remote_infer_live.py  test_remote_mutable_topic_live.py  test_target.py
cookbook/book/: .gitattributes  .gitignore  EXECUTION-STATUS.md  H3-WAVE-PLAN.md  H4-POINT-IN-TIME-CHAPTER-PLAN.md  NOTICE  README.md  _quarto.yml  index.qmd  pyproject.toml  references.bib
cookbook/book/artifacts/: README.md
cookbook/book/artifacts/air/: airports.parquet  checksums.json  contains_edges.parquet  continent_golden.parquet  embeddings.parquet  golden_metrics.json  neighbor_graph.parquet  propagated.parquet  route_edges.parquet  tenancy.json
cookbook/book/artifacts/arxiv/: cal_split.json  calibration_report.json  checksums.json  cite_edges.parquet  conformal_synthetic_shift.json  ctx_predictor.json  embeddings.parquet  ft_model.json  golden_metrics.json  neighbor_graph.parquet  (+8 more)
cookbook/book/chapters/: api-reference.qmd  datasets.qmd  recipes-quickstart.qmd
cookbook/book/jammi_cookbook/: __init__.py  _api_reference.md  citation_map.py  contracts.py  datasets.py  determinism.py  rails.py
cookbook/book/scripts/: build_air_cache.py  build_arxiv_cache.py  build_cdc_cache.py  build_channels_taxonomy_cache.py  build_eval_cache.py  build_feature_store_cache.py  build_finetune_cache.py  build_finetune_regression_cache.py  build_lifecycle_cache.py  build_point_in_time_cache.py  build_recompute_cache.py  build_retrieval_cache.py  build_scale_cache.py  build_tenancy_cache.py  build_tenancy_h3_cache.py  check_api_reference.py  check_citations.py  no_deferral_grep.sh
cookbook/book/tests/: test_air_cache.py  test_calibration.py  test_cdc_cache.py  test_channels.py  test_channels_taxonomy.py  test_citation_map.py  test_closed_loop.py  test_conformal.py  test_contracts.py  test_datasets.py  test_determinism.py  test_eval_cache.py  test_feature_store_cache.py  test_finetune_cache.py  test_finetune_regression_cache.py  test_keystone_cache.py  test_lifecycle_cache.py  test_point_in_time_cache.py  test_rails.py  test_recompute_cache.py  test_retrieval_cache.py  test_scale_cache.py  test_tenancy_b_cache.py  test_tenancy_h3_cache.py
crates/jammi-admin/: Cargo.toml  README.md
crates/jammi-admin/src/: lib.rs
crates/jammi-ai/: Cargo.toml  README.md  build.rs
crates/jammi-ai/src/: jammi.rs  lib.rs  local_session.rs  remote_session.rs  session.rs
crates/jammi-ai/tests/: e2e_inference.rs  models.rs  phase03_models.rs  phase04_inference.rs
crates/jammi-bench/: Cargo.toml
crates/jammi-bench/baselines/: cache_slo.json  conformal.json  context_predictor.json  eval.json  graph_train.json  model_inference.json  propagate.json  recompute.json  training.json
crates/jammi-bench/src/: cache_slo.rs  conformal.rs  context_predictor.rs  corpus.rs  eval.rs  fixture.rs  graph_train.rs  main.rs  model_inference.rs  propagate.rs  rate_gate.rs  recall.rs  recompute_scale.rs  report.rs  rss.rs  search_rss.rs  sweep.rs  train_scale.rs
crates/jammi-cli/: Cargo.toml  README.md
crates/jammi-cli/src/: main.rs
crates/jammi-client/: Cargo.toml  README.md
crates/jammi-client/src/: lib.rs
crates/jammi-db/: Cargo.toml  README.md
crates/jammi-db/examples/: sample-postgres.toml
crates/jammi-db/src/: config.rs  error.rs  evidence_channel.rs  lib.rs  model_task.rs  server_info.rs  session.rs
crates/jammi-encoders/: Cargo.toml  README.md
crates/jammi-encoders/src/: aggregate.rs  any.rs  audio.rs  bert.rs  clap_audio.rs  clip_text.rs  distilbert.rs  error.rs  htsat_audio.rs  layer_norm.rs  lib.rs  mask.rs  modernbert.rs  pooling.rs
crates/jammi-encoders/tests/: golden_parity.rs  live_real_clap.rs  parity.rs
crates/jammi-engine/: Cargo.toml  README.md
crates/jammi-engine/src/: config.rs  error.rs  evidence_channel.rs  lib.rs  model_task.rs  session.rs  tenant.rs  tenant_scope.rs
crates/jammi-engine/tests/: foundation.rs  phase01_foundation.rs  phase02_sources.rs
crates/jammi-lora/: Cargo.toml  README.md
crates/jammi-lora/src/: adapter.rs  config.rs  error.rs  init.rs  lib.rs  lora_linear.rs  save_load.rs  seeded.rs  wrapper.rs
crates/jammi-lora/tests/: it.rs
crates/jammi-numerics/: Cargo.toml  README.md
crates/jammi-numerics/src/: calibration.rs  distance.rs  error.rs  lib.rs  pareto.rs  retrieval.rs
crates/jammi-numerics/tests/: it.rs
crates/jammi-python/: Cargo.toml
crates/jammi-python/src/: audit.rs  convert.rs  database.rs  ephemeral.rs  error.rs  job.rs  lib.rs  model_task.rs  remote.rs  search.rs
crates/jammi-python/tests/: conftest.py  it.rs  test_conformance.py  test_embedded_training.py  test_ephemeral.py  test_mutable_tables.py  test_remote.py  test_tenant.py  test_topics.py
crates/jammi-server/: Cargo.toml  README.md  build.rs
crates/jammi-server/examples/: jammi.toml
crates/jammi-server/src/: error.rs  flight.rs  grpc_web_trailers.rs  lib.rs  main.rs  metrics_layer.rs  runtime.rs  state.rs  telemetry.rs  tiers.rs
crates/jammi-wire/: Cargo.toml  README.md  build.rs
crates/jammi-wire/src/: audit.rs  catalog.rs  channel.rs  embedding.rs  error.rs  eval_wire.rs  fine_tune.rs  inference.rs  lib.rs  mutable_table.rs  proto.rs  request.rs  training.rs  transport.rs  trigger.rs
packaging/server-cpu/: README.md  pyproject.toml
packaging/server-cpu/jammi_server/: __init__.py  _entry.py
packaging/server-cu12/: README.md  pyproject.toml
packaging/server-cu12/jammi_server/: __init__.py  _entry.py
(+835 files in other folders)
