[workspace]
resolver = "2"
members = [
    "crates/jammi-engine",
    "crates/jammi-ai",
    "crates/jammi-server",
    "crates/jammi-python",
    "crates/jammi-cli",
    "crates/jammi-lora",
    "crates/jammi-encoders",
    "crates/jammi-test-utils",
]
# jammi-python is a PyO3 cdylib — build via maturin, not cargo build --workspace
default-members = [
    "crates/jammi-engine",
    "crates/jammi-ai",
    "crates/jammi-server",
    "crates/jammi-cli",
    "crates/jammi-lora",
    "crates/jammi-encoders",
]

[workspace.package]
version = "0.5.0"
edition = "2021"
rust-version = "1.88.0"
license = "Apache-2.0"
repository = "https://github.com/f-inverse/jammi-ai"

[workspace.dependencies]
# Internal crates
jammi-engine = { version = "0.5.0", path = "crates/jammi-engine" }
jammi-ai = { version = "0.5.0", path = "crates/jammi-ai" }
jammi-server = { version = "0.5.0", path = "crates/jammi-server" }
jammi-lora = { version = "0.5.0", path = "crates/jammi-lora" }
jammi-encoders = { version = "0.5.0", path = "crates/jammi-encoders" }
jammi-test-utils = { path = "crates/jammi-test-utils" }

# Query engine
datafusion = "52.3"
datafusion-federation = "0.5"
arrow = "57"
arrow-flight = { version = "57", features = ["flight-sql"] }
arrow-schema = "57"
arrow-array = "57"
arrow-ipc = "57"

# Storage
parquet = "57"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "postgres", "uuid", "chrono", "json", "macros"] }

# ML inference
candle-core = "0.9"
candle-nn = "0.9"
# candle-transformers is consumed only by jammi-encoders dev-dependencies
# (parity-test feature) — it is no longer in any production dep tree.
candle-transformers = "0.9"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["download-binaries"] }
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"] }
usearch = "2.25"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "tiff"] }

# Python bindings
pyo3 = { version = "0.28", features = ["abi3-py39", "extension-module"] }
pyo3-arrow = { version = "0.16", default-features = false }

# HTTP / server
axum = "0.8"
datafusion-flight-sql-server = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tonic = "0.14"
tonic-prost = "0.14"
tonic-build = "0.14"
tonic-prost-build = "0.14"
prost = "0.14"
prost-types = "0.14"
tokio = { version = "1.44", features = ["full"] }
tower = "0.5"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
backon = "1"
moka = { version = "0.12", features = ["future"] }
seahash = "4"
bytemuck = "1"
hf-hub = { version = "0.5", default-features = false, features = ["tokio", "ureq", "rustls-tls"] }
thiserror = "2"
directories = "6"
url = "2"
async-trait = "0.1"
futures = "0.3"
async-stream = "0.3"
parking_lot = "0.12"

[profile.dev]
debug = "line-tables-only"

