[workspace]
resolver = "2"
members = [
    "crates/jammi-db",
    "crates/jammi-numerics",
    "crates/jammi-wire",
    "crates/jammi-admin",
    "crates/jammi-client",
    "crates/jammi-ai",
    "crates/jammi-server",
    "crates/jammi-python",
    "crates/jammi-cli",
    "crates/jammi-lora",
    "crates/jammi-encoders",
    "crates/jammi-test-utils",
    "crates/jammi-bench",
]
# jammi-python is a PyO3 cdylib — build via maturin, not cargo build --workspace
default-members = [
    "crates/jammi-db",
    "crates/jammi-numerics",
    "crates/jammi-wire",
    "crates/jammi-admin",
    "crates/jammi-client",
    "crates/jammi-ai",
    "crates/jammi-server",
    "crates/jammi-cli",
    "crates/jammi-lora",
    "crates/jammi-encoders",
    "crates/jammi-bench",
]

[workspace.package]
version = "0.26.5"
edition = "2021"
rust-version = "1.88.0"
license = "Apache-2.0"
repository = "https://github.com/f-inverse/jammi-ai"

[workspace.dependencies]
# Internal crates
jammi-db = { version = "0.26.5", path = "crates/jammi-db" }
jammi-numerics = { version = "0.26.5", path = "crates/jammi-numerics" }
# The candle-free client substrate: the wire transport (`jammi-wire`), the
# control-plane client (`jammi-admin`), and the data-plane client
# (`jammi-client`). None pull the embedded ML stack — they speak the gRPC /
# Flight SQL wire only.
jammi-wire = { version = "0.26.5", path = "crates/jammi-wire" }
jammi-admin = { version = "0.26.5", path = "crates/jammi-admin" }
jammi-client = { version = "0.26.5", path = "crates/jammi-client" }
jammi-ai = { version = "0.26.5", path = "crates/jammi-ai" }
jammi-server = { version = "0.26.5", path = "crates/jammi-server" }
# Default features OFF at the workspace root so a consumer can pull jammi-lora's
# candle-free config vocabulary without the candle stack (jammi-ai's thin
# `wire`-only build). Consumers that need the candle-backed primitives opt in with
# `features = ["candle"]` (jammi-encoders) or via a feature that does (jammi-ai's
# `local`).
jammi-lora = { version = "0.26.5", path = "crates/jammi-lora", default-features = false }
jammi-encoders = { version = "0.26.5", path = "crates/jammi-encoders" }
jammi-test-utils = { path = "crates/jammi-test-utils" }

# Query engine
datafusion = "52.3"
datafusion-federation = "0.5"
arrow = "57"
arrow-flight = { version = "57", features = ["flight-sql"] }
arrow-schema = "57"
arrow-array = "57"
arrow-ipc = "57"

# Storage
# The `object_store` feature pulls in `ParquetObjectWriter`, the async sink
# Jammi uses for every result-table write. Without it the writer falls back
# to a sync `File` path that can't target S3 / GCS / Azure.
parquet = { version = "57", features = ["object_store"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "postgres", "uuid", "chrono", "json", "macros"] }
# Object-store pin matches the transitive version DataFusion 52.3 carries
# (see Cargo.lock: object_store 0.12.5). Mismatching this would force
# duplicate crates in the dep graph and break ListingTableUrl interop.
object_store = { version = "0.12", default-features = false }

# ML inference
candle-core = "0.9"
candle-nn = "0.9"
# candle-transformers is consumed only by jammi-encoders dev-dependencies
# (parity-test feature) — it is no longer in any production dep tree.
candle-transformers = "0.9"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["download-binaries"] }
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"] }
usearch = "2.25"
# Pure-Rust Lucene-class full-text / BM25 engine backing the lexical-retrieval
# sidecar. Fast-startup, no system libraries — fits the single-binary /
# laptop-default invariant; rides the embedded engine's `local` feature.
tantivy = "0.26"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "tiff"] }
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
# Pure-Rust audio container demux + codec decode for the audio-embedding path
# (bytes-in: WAV/FLAC/MP3/Ogg-Vorbis). No system libraries — hermetic builds.
symphonia = { version = "0.5", default-features = false, features = ["wav", "pcm", "flac", "mp3", "ogg", "vorbis"] }

# Python bindings
# `extension-module` is *not* enabled at the workspace dep level — the
# `jammi-python` crate exposes its own `extension-module` feature that
# forwards to pyo3's. The maturin build activates that feature via
# `pyproject.toml`'s `[tool.maturin].features`; leaving it off in the
# default `cargo test --workspace` lane lets the integration test binary
# link against libpython without unresolved symbols.
pyo3 = { version = "0.28", default-features = false, features = ["abi3-py39", "macros"] }
pyo3-arrow = { version = "0.16", default-features = false }

# HTTP / server
axum = "0.8"
datafusion-flight-sql-server = "0.4"
prometheus = { version = "0.14", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tonic = "0.14"
tonic-prost = "0.14"
tonic-build = "0.14"
tonic-prost-build = "0.14"
# Vendored protoc binary so source builds (`cargo install jammi-cli`) compile the
# wire protos without a system protoc on PATH. `jammi-wire`'s build script falls
# back to this when `PROTOC` is not already set in the env.
protoc-bin-vendored = "3.2"
tonic-web = "0.14"
prost = "0.14"
prost-types = "0.14"
tokio = { version = "1.44", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower = "0.5"
# Low-level HTTP body framing — the gRPC-Web trailers-only repair layer builds
# the in-body trailer frame `tonic-web` omits for a trailers-only error.
http-body = "1"
pin-project = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
backon = "1"
moka = { version = "0.12", features = ["future"] }
seahash = "4"
bytemuck = "1"
hf-hub = { version = "0.5", default-features = false, features = ["tokio", "ureq", "rustls-tls"] }
thiserror = "2"
directories = "6"
url = "2"
async-trait = "0.1"
# Audit-record signing (J2): HMAC-SHA256 over the canonical serialization,
# per-tenant key derived via HKDF-SHA256 from JAMMI_AUDIT_MASTER_KEY.
hmac = "0.12"
sha2 = "0.10"
hkdf = "0.12"
hex = "0.4"
futures = "0.3"
async-stream = "0.3"
parking_lot = "0.12"
async-nats = "0.41"

# Numerics (jammi-numerics) — pure-math kernels for stats, GP+EI, divergence,
# eval metrics, distance, and Pareto. rand is pinned to 0.8 to keep
# `build_projection_vector`'s output bit-equivalent with consumers (a
# downstream consumer reads the same projection seed).
nalgebra = "0.34"
rand = "0.8"
rand_distr = "0.4"
statrs = "0.18"
approx = "0.5"

# Test utilities
test-case = "3.3"
libc = "0.2"

[profile.dev]
debug = "line-tables-only"

