[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "jammi-ai"
requires-python = ">=3.9"
dynamic = ["version"]
description = "Embeddable AI engine for inference, embeddings, vector search, and fine-tuning"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "F-Inverse" }]
keywords = ["embeddings", "vector-search", "fine-tuning", "inference", "machine-learning"]
# `jammi-client` is a HARD dependency, not a `[client]` extra: it is the remote
# arm of `connect(target)`, bundled so local→remote scaling is zero-friction.
# An extra could only *add* the client, never *subtract* the compiled engine —
# and the embed wheel is the engine. Lockstep version with the workspace.
dependencies = ["jammi-client==0.24.0"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
]

[project.urls]
Homepage = "https://github.com/f-inverse/jammi-ai"
Documentation = "https://f-inverse.github.io/jammi-ai/"
Repository = "https://github.com/f-inverse/jammi-ai"
"Bug Tracker" = "https://github.com/f-inverse/jammi-ai/issues"

[tool.maturin]
manifest-path = "crates/jammi-python/Cargo.toml"
module-name = "jammi_ai._native"
python-source = "python"
# `extension-module` is opt-in on the `jammi-python` crate so that
# `cargo test --workspace` can link the integration test against
# libpython. Maturin builds the extension module proper, so it activates
# the feature explicitly here.
features = ["extension-module"]
