[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "jammi-client"
version = "0.26.1"
description = "Pure-Python gRPC client for a remote Jammi engine — the deploy half of jammi-ai"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [{ name = "F-Inverse" }]
keywords = ["embeddings", "vector-search", "inference", "grpc", "client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
]
dependencies = [
    "grpcio>=1.60",
    "protobuf>=4.25",
    "pyarrow>=14",
    "typing_extensions>=4.0",
]

[project.optional-dependencies]
# `make generate` regenerates the proto stubs. The wheel ships the
# already-generated stubs; this extra is for the developer workflow.
dev = [
    "grpcio-tools>=1.60",
    "pytest>=7",
]

[project.urls]
Homepage = "https://github.com/f-inverse/jammi-ai"
Documentation = "https://f-inverse.github.io/jammi-ai/"
Repository = "https://github.com/f-inverse/jammi-ai"
"Bug Tracker" = "https://github.com/f-inverse/jammi-ai/issues"

[tool.hatch.build.targets.wheel]
only-include = ["jammi_client"]
# Sdist is excluded; we ship the universal py3-none-any wheel only.

[tool.hatch.build.targets.sdist]
exclude = ["*"]
