[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "jammi-client"
version = "0.26.5"
description = "Pure-Python gRPC client for a remote Jammi engine — the deploy half of jammi-ai"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [{ name = "F-Inverse" }]
keywords = ["embeddings", "vector-search", "inference", "grpc", "client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
]
# The grpcio/protobuf floors are COUPLED to the `grpcio-tools` pin in the
# `dev` extra below. The generated stubs refuse to import under a grpcio older
# than the generator's version (`GRPC_GENERATED_VERSION` guard in
# `*_pb2_grpc.py`) or a protobuf runtime older than the generator's bundled
# gencode version (`ValidateProtobufRuntimeVersion` in `*_pb2.py`), so the
# floors must be at least what the pinned generator emits. Bump the pin and
# the floors together; `tests/test_generated_floor.py` asserts the coupling.
dependencies = [
    "grpcio>=1.80.0",
    "protobuf>=6.31.1",
    "pyarrow>=14",
    "typing_extensions>=4.0",
]

[project.optional-dependencies]
# `make generate` regenerates the proto stubs. The wheel ships the
# already-generated stubs; this extra is the generator toolchain for the
# developer workflow AND every CI/publish lane — no workflow installs
# `grpcio-tools` ad hoc. The exact `==` pin is load-bearing: the runtime
# floors above are derived from what THIS generator emits, and an unpinned
# generator would let the published wheel's floors silently lie. It is also
# the newest grpcio-tools whose grpcio runtime counterpart still installs on
# every Python in `requires-python` (grpcio >=1.81 needs Python >=3.10).
dev = [
    "grpcio-tools==1.80.0",
    "pytest>=7",
    "tomli>=2; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/f-inverse/jammi-ai"
Documentation = "https://f-inverse.github.io/jammi-ai/"
Repository = "https://github.com/f-inverse/jammi-ai"
"Bug Tracker" = "https://github.com/f-inverse/jammi-ai/issues"

[tool.hatch.build.targets.wheel]
only-include = ["jammi_client"]
# Sdist is excluded; we ship the universal py3-none-any wheel only.

[tool.hatch.build.targets.sdist]
exclude = ["*"]
